@@ -1,3 +1,13 @@
+2007-02-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b33
+
+ * Change: Better handling of accesskeys in galleryLink()
+ 
+ * Change: Better status message in copy_photo.pgp
+ 
+ * Fix: Double accesskey in edit_caption.php
+ 
+ * Change: Nicified sort_album.php a little.
+ 
 2007-02-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b32
 
  * Fix: Initialize field 'dimensionsAsPopup' for new albums.
